caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unclosed_extends_bracket.caffeine
"test" extends [_base:
  Requires { env: String }
  Provides { value: "x" }
